Bug 59393 - REGRESSION: when FILEOPEN particular .RTF column width in tables is taken from the next column
Summary: REGRESSION: when FILEOPEN particular .RTF column width in tables is taken fro...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.0.1
Keywords: filter:rtf, regression
: 50226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-15 06:11 UTC by Timon
Modified: 2015-12-17 12:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with wrong column width in LibO 4 and screenshots from different office suites (221.79 KB, application/x-zip-compressed)
2013-01-15 06:11 UTC, Timon
Details
RTF file with problems what might be related (470.87 KB, application/x-zip-compressed)
2013-01-15 06:12 UTC, Timon
Details
Summary table in different office suites to see problems in Example 3 and Example 11 (14.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-15 06:16 UTC, Timon
Details
LibreOffice 4.1 Master on Linux (62.10 KB, application/pdf)
2013-01-15 18:51 UTC, Joel Madero
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timon 2013-01-15 06:11:01 UTC
Created attachment 73047 [details]
Example file with wrong column width in LibO 4 and screenshots from different office suites

LibO Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799) on Windows XP SP3 Russian

After I entered sizes of columns from all Office suites (MSO 2003 SP3, MSO 2007 SP3, LibO 3.6.4.3 and LibO 4.0.0.1) in a single table, it is clearly seen that in LibO 4.0 width for the first column is taken from the second, then for the second - from the third, and only then for the third column from the first!

"Summary table with column size compare.ods" include name of a document, page number of the document and the table number in the order of the document.

Because of this problem a large number of documents has become unsuitable even for viewing.
Comment 1 Timon 2013-01-15 06:12:27 UTC
Created attachment 73048 [details]
RTF file with problems what might be related
Comment 2 Timon 2013-01-15 06:16:20 UTC
Created attachment 73049 [details]
Summary table in different office suites to see problems in Example 3 and Example 11
Comment 3 Joel Madero 2013-01-15 18:50:17 UTC
Tested on Version 4.1.0.0.alpha0+ (Build ID: 8bab53a19828b888ca689dafaf98aa3ba82228a) in Linux, looks like it works fine. Can someone test Windows build?
Comment 4 Joel Madero 2013-01-15 18:51:01 UTC
Created attachment 73114 [details]
LibreOffice 4.1 Master on Linux
Comment 5 Jorendc 2013-01-15 20:37:25 UTC
Thanks fore reporting!
I can reproduce this problem using Windows 7 x64 and LibreOffice 4.0.0.1 RC1;

@Miklos: because of the topic 'RTF' and the regression here, I added you to CC.

Kind regards,
Joren
Comment 6 headsup 2013-01-31 08:34:12 UTC
*** Bug 59953 has been marked as a duplicate of this bug. ***
Comment 7 headsup 2013-01-31 08:57:15 UTC
*** Bug 50226 has been marked as a duplicate of this bug. ***
Comment 8 Miklos Vajna 2013-01-31 14:43:46 UTC
Hm indeed, it's fine on master but problematic on -4-0. I'll try to see when this got fixed.
Comment 9 ape 2013-01-31 15:16:24 UTC
(In reply to comment #6)
> *** Bug 59953 has been marked as a duplicate of this bug. ***

This error about the fact that:
- the last column’s width is appropriated at the 1st column;
- the 1st column’s width is appropriated at the 2nd column, etc.

The bug 59953 reports about the damage of table structure, if table has rows, in which the cells were merged and (or) they were split.

I returned to bug 59953 previous status therefore.
Comment 10 Miklos Vajna 2013-01-31 15:21:31 UTC
OK, so this was fixed in master with d276d3f3ae112a11c8cb5768650d147cbb94275e. Backporting that commit to -4-0 makes the bugdoc load fine there as well.

-4-0 review: https://gerrit.libreoffice.org/1947
Comment 11 Not Assigned 2013-02-05 21:27:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e24463c6330b0c11e3ff31c6fd373e3b32e6fc7c&h=libreoffice-4-0

fdo#59393 fdo#44053 fix this again and this time add a testcase as well


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:10:14 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]