fdo#59393 fdo#44053 fix this again and this time add a testcase as well

This was about importing RTF tables where different rows had different
number of cells. In the meantime, a better implementation was added for
DOCX, just using that for RTF fixes the import of this bugdoc.

Also fixes a crasher while loading ooo43817-1.rtf.

(cherry picked from commit d276d3f3ae112a11c8cb5768650d147cbb94275e)

Change-Id: I0970275272eca7f33a442bd6acc97a4f8d9dabeb
Reviewed-on: https://gerrit.libreoffice.org/1947
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>